add repos to pom

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,41 @@
 		</license>
 	</licenses>
 
+	 <repositories>
+                <repository>
+          <id>jboss-community-repository</id>
+          <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </repository>
+                <repository>
+          <id>mvn-community-repository</id>
+          <url>https://maven.repository.redhat.com/ga/</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </repository>
+        </repositories>
+	<pluginRepositories>
+                <pluginRepository>
+          <id>jboss-community-plugin-repository</id>
+          <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </pluginRepository>
+        </pluginRepositories>
+
 	<properties>
 		<!-- Explicitly declaring the source encoding eliminates the following 
 			message: -->
